<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.newuser.ChooseLocation">

    <TextView
        android:id="@+id/choose_location_text"
        android:layout_width="280dp"
        android:layout_height="58dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/location_for_delivery"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/select_from_map_button"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/select_from_map"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#454545"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delivery_address_textView"
        android:layout_width="362dp"
        android:layout_height="229dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/etbackground"
        android:fontFamily="@font/sniglet"
        android:padding="20dp"
        android:text="@string/delivery_address"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/select_from_map_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/unserviceable_location_text"
        android:layout_width="328dp"
        android:layout_height="43dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:textColor="#EC2222"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_location_text" />

</androidx.constraintlayout.widget.ConstraintLayout>