<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    tools:context="in.veggiefy.androidapp.ui.login.newuser.NewRegistrationPersonal">

    <TextView
        android:id="@+id/your_details_text"
        android:layout_width="280dp"
        android:layout_height="58dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/your_details"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="309dp"
        android:layout_height="600dp"
        android:background="@drawable/blackoutllineclrfill"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">


        <ImageView
            android:id="@+id/product_cart_imageView"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="15dp"
            android:src="@mipmap/person_image__foreground" />

        <EditText
            android:id="@+id/name_Text"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/etbackground"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:fontFamily="@font/sniglet"
            android:hint="@string/prompt_name"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_Text"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/etbackground"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:fontFamily="@font/sniglet"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password_Text"
            app:layout_constraintStart_toStartOf="@+id/password_Text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/next_page_button"
            android:layout_width="155dp"
            android:layout_height="67dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/next_page"
            android:textColor="#4CAF50"
            app:backgroundTint="#FFFFFF" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>