<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"

        />


    <TextView
        android:id="@+id/choose_location_text"
        android:layout_width="280dp"
        android:layout_height="58dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/business_registration"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="335dp"
        android:layout_height="600dp"
        android:background="@drawable/blackoutllineclrfill"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="105dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/store__foreground" />

        <EditText
            android:id="@+id/business_name_editText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/etbackground"
            android:drawableStart="@drawable/ic_store"
            android:drawableLeft="@drawable/ic_store"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/sniglet"
            android:hint="@string/name_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="false"
            android:textColorHighlight="#FFFFFF" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            android:entries="@array/vendor_type"
            android:padding="10dp"
            android:outlineSpotShadowColor="@color/black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="217dp"
                android:layout_margin="5dp"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="20dp"
                android:elevation="3dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/shop_image"
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="#EAEAEA"
                    app:srcCompat="@mipmap/add_images_foreground" />

                <Button
                    android:id="@+id/shop_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/add_image_textView"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="23dp"
            android:fontFamily="@font/sniglet"
            android:text="@string/add_images_of_your_business"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/next_page_button2"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="97dp"
            android:layout_marginLeft="97dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/finish"
            android:textColor="#4CAF50"
            android:textSize="14sp"
            app:backgroundTint="#FFFFFF" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>